# ubuntu_onnx

./: CMakeLists.txt  inference_cpu.cpp  inference_cuda.cpp
